# k8s-study

./: .gitmodules  README.md
GKE-buildup-scripts/: pyproject.toml
GKE-buildup-scripts/terraform_cdk/: README.md
GKE-buildup-scripts/terraform_scripts/: firewall.tf  main.tf  nat.tf  terraform.tfvars  vpc.tf
IaC/: main.tf
IaC/gke/: README.md  firewall.tf  (+4 more)
basic-knowledge/: README.md
basic-knowledge/ch18/: 18-1_list_pods.py  18-2_create_pod.py  18-3_nginx_deployment_create.yaml  18-4_nginx_deployment_patch.py  18-5_watch_mechanism.py  18-6_read_stream_log.py  18-7_command_exec.py  18-8_portforward.py  README.md  nginx-deployment.yaml  pyproject.toml
basic-knowledge/ch18/redis/: redis-config.yaml  redis.yaml
ch03/: README.md
ch06/: README.md
ch07/: README.md  alpaca-prod.yaml
ch08/: 8-1_simple-ingress.yaml  8-2_host-ingress.yaml  8-3_path-ingree.yaml  8-4_tls-secret.yaml  README.md
ch09/: 9-1-1_kurd-rs.yaml  9-1_kuard-rs.yaml  9-2_hpa.yaml  aa.txt
ch10/: kuard-deployment.yaml
ch12/: 12-2_job-oneshot-failure1.yaml  12-3_job-parallel.yaml  12-4_rs-queue.yaml  12-8_cron-job.yaml
ch13/: 13-1-1_my-config.yaml  13-2_kuard-config.yaml  13-5_my-config-update.yaml
ch14/: 14-1_role-sample.yaml  14-2_role-binding-sample.yaml
ch15/: 15-12_mongo-configmap.yaml  15-13_mongo.yaml  15-1_dns-service.yaml  15-2_external-ip-service.yaml  15-8_storageclass.yaml
ch16/: 16-1_crd_first_sample.yaml  16-3_admission-controller-csr.yaml
helm-study/: README.md  charts_tips_and_tricks.md  panda.yaml  quickstart.md  using_helm.md
preparation/: change_gcloud_account.sh
(+108 files in other folders)
